# RCS_AGV

./: .gitignore  AGV_ARCHITECTURE_ANALYSIS.md  NEW_ARCHITECTURE_PROPOSAL.md  TASK_MANAGER_ANALYSIS.md
src/3d_localization_csg/: CMakeLists.txt  README.en.md  README.md  package.xml
src/3d_localization_csg/cmake/: PCL.cmake  geographic.cmake  global_defination.cmake  opencv.cmake  sophus.cmake
src/3d_localization_csg/config/filtering/: filtering.yaml
src/3d_localization_csg/config/pretreat/: pretreat.yaml
src/3d_localization_csg/config/saved_poses/: latest_pose.txt
src/3d_localization_csg/include/data_pretreat/: data_pretreat_flow.hpp
src/3d_localization_csg/include/filtering/: filtering.hpp  filtering_flow.hpp
src/3d_localization_csg/include/global_defination/: global_defination.h.in
src/3d_localization_csg/include/models/cloud_filter/: box_filter.hpp  cloud_filter_interface.hpp  no_filter.hpp  voxel_filter.hpp
src/3d_localization_csg/include/publisher/: cloud_publisher.hpp  imu_publisher.hpp  odometry_publisher.hpp  point_publisher.hpp  pos_vel_publisher.hpp  tf_broadcaster.hpp
src/3d_localization_csg/include/scan_context/: KDTreeVectorOfVectorsAdaptor.h  Scancontext.h
src/3d_localization_csg/include/sensor_data/: cloud_data.hpp  gnss_data.hpp  imu_data.hpp  pos_vel_data.hpp  pose_data.hpp  velocity_data.hpp
src/3d_localization_csg/include/subscriber/: cloud_subscriber.hpp  gnss_subscriber.hpp  imu_subscriber.hpp  int_subscriber.hpp  odometry_subscriber.hpp  pos_vel_subscriber.hpp  velocity_subscriber.hpp
src/3d_localization_csg/include/tf_listener/: tf_listener.hpp
src/3d_localization_csg/include/tools/: common.h  file_manager.hpp
src/3d_localization_csg/launch/: localization_start_hf_heli_car.launch  localization_start_hf_test_car.launch  localization_start_norviz.launch  localization_start_rc2_0.launch  localization_start_rc3_0.launch  odom.launch  send_wall_time_imu_gps.launch  test.launch
src/3d_localization_csg/launch/include/: state_publisher_loc_hf_heli_car.launch  state_publisher_loc_hf_test_car.launch  state_publisher_loc_rc2_0.launch  state_publisher_loc_rc3_0.launch
src/3d_localization_csg/msg/: cloud_info.msg
src/3d_localization_csg/rviz/: filtering.rviz
src/3d_localization_csg/src/: republish_vel_node.cpp  send_walltime_gps_node.cpp  send_walltime_imu_node.cpp  send_walltime_odom_node.cpp  test_frame_node.cpp  test_gps_to_odom_node.cpp
src/3d_localization_csg/src/data_pretreat/: data_pretreat_flow.cpp  data_pretreat_flow.no_use_gps
src/3d_localization_csg/src/filtering/: filtering.cpp  filtering_flow.cpp
src/3d_localization_csg/src/localization/: data_pretreat_node.cpp  filtering_node.cpp
src/3d_localization_csg/src/publisher/: cloud_publisher.cpp  imu_publisher.cpp  odometry_publisher.cpp  point_publisher.cpp  pos_vel_publisher.cpp  tf_broadcaster.cpp
src/3d_localization_csg/src/scancontext/: Scancontext.cpp
src/3d_localization_csg/src/sensor_data/: gnss_data.cpp  imu_data.cpp  pose_data.cpp  velocity_data.cpp
src/3d_localization_csg/src/subscriber/: cloud_subscriber.cpp  gnss_subscriber.cpp  imu_subscriber.cpp  int_subscriber.cpp  odometry_subscriber.cpp  pos_vel_subscriber.cpp  velocity_subscriber.cpp
src/3d_localization_csg/src/tf_listener/: tf_lisener.cpp
src/3d_localization_csg/src/tools/: common.cpp  file_manager.cpp
src/common_msgs/: CMakeLists.txt
src/common_msgs/include/common_msgs/: common_haeder.h
src/common_msgs/msg/: ipc_res_data.msg  nav_data.msg  plc_res_nav_data.msg
src/plc_interaction/: CMakeLists.txt
src/plc_interaction/include/: plc_interaction.h
src/plc_interaction/src/: plc_interaction.cpp  plc_udp_client.cpp
src/task_manager/: CMakeLists.txt  package.xml
src/task_manager/config/: config_task.yaml
src/task_manager/include/: pallet_identify_m4.h  rfid_reader.h  task_manager.h
src/task_manager/include/rfid_h/: GClient.h  GServer.h  delegate.h  message.h
src/task_manager/launch/: task_manager_start.launch
src/task_manager/maps/: blank_map.yaml
src/task_manager/param/: costmap_common_params.yaml  global_costmap_params.yaml  global_planner_params.yaml
src/task_manager/src/: m4_socket_client.cpp  rfid_reader.cpp  task_manager.cpp  task_manager_node.cpp  test  test.cpp  void TaskManager::CalculatePathDeviation.ini
src/vanjee_lidar_sdk/: CMakeLists.txt  LICENSE  README_CN.md  README_EN.md  package.xml
src/vanjee_lidar_sdk/config/: config.yaml  config_722z.yaml  config_733.yaml
src/vanjee_lidar_sdk/doc/howto/: 01_how_to_change_point_type_CN.md  01_how_to_change_point_type_EN.md  02_how_to_decode_online_lidar_CN.md  02_how_to_decode_online_lidar_EN.md  03_online_lidar_advanced_topics_CN.md  03_online_lidar_advanced_topics_EN.md  04_how_to_decode_pcap_file_CN.md  04_how_to_decode_pcap_file_EN.md  05_how_to_use_coordinate_transformation_CN.md  05_how_to_use_coordinate_transformation_EN.md  06_how_to_use_vanjee_driver_viewer_CN.md  06_how_to_use_vanjee_driver_viewer_EN.md  07_how_to_compile_on_windows_CN.md  07_how_to_compile_on_windows_EN.md
src/vanjee_lidar_sdk/doc/intro/: 01_error_code_intro_CN.md  01_error_code_intro_EN.md  02_parameter_intro_CN.md  02_parameter_intro_EN.md  03_device_ctrl_intro_CN.md  03_device_ctrl_intro_EN.md
src/vanjee_lidar_sdk/launch/: eloquent_start.py  start.launch  start.py  start_no_rviz.launch
src/vanjee_lidar_sdk/msg/: DeviceCtrl.msg
src/vanjee_lidar_sdk/node/: vanjee_lidar_sdk_node.cpp
src/vanjee_lidar_sdk/param/: Vanjee_722f_VA.csv
src/vanjee_lidar_sdk/rviz/: rviz2.rviz
src/vanjee_lidar_sdk/src/manager/: node_manager.cpp  node_manager.hpp
src/vanjee_lidar_sdk/src/msg/: lidar_point_cloud_msg.hpp
src/vanjee_lidar_sdk/src/source/: source.hpp  source_device_ctrl_ros.hpp  source_driver.hpp  source_imu_packet_ros.hpp  source_pointcloud_ros.hpp  source_recv_device_ctrl_ros.hpp  source_ros_msg_delegate.hpp  source_scandata_ros.hpp
src/vanjee_lidar_sdk/src/utility/: common.hpp  yaml_reader.hpp
src/vanjee_lidar_sdk/src/vanjee_driver/: CMakeLists.txt  README_CN.md  README_EN.md
(+272 files in other folders)
